4.1.0-SNAPSHOT/docs/client/client-features.md
# Features

## Show Version in Application List[​](#show-version-in-application-list "Direct link to Show Version in Application List")

For **Spring Boot** applications the easiest way to show the version, is to use the `build-info` goal from the `spring-boot-maven-plugin`, which generates the `META-INF/build-info.properties`. See also the [Spring Boot Reference Guide](http://docs.spring.io/spring-boot/docs/current-SNAPSHOT/reference/htmlsingle/#howto-build-info).

For **non-Spring Boot** applications you can either add a `version` or `build.version` to the registration metadata and the version will show up in the application list.

pom.xml

```
<build>
    <plugins>
        <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <executions>
                <execution>
                    <goals>
                        <goal>build-info</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
    </plugins>
</build>
```

To generate the build-info in a gradle project, add the following snippet to your `build.gradle`:

build.gradle

```
springBoot {
    buildInfo()
}
```

## JMX-Bean Management[​](#jmx-bean-management "Direct link to JMX-Bean Management")

To interact with JMX-beans in the admin UI you have to include [Jolokia](https://jolokia.org/) in your application and expose it via the actuator endpoint. As Jolokia is servlet based there is no support for reactive applications.

You might want to set spring.jmx.enabled=true if you want to expose Spring beans via JMX.

### Spring Boot 4 App[​](#spring-boot-4-app "Direct link to Spring Boot 4 App")

Spring Boot 4 does not support Jolokia directly, you need a separate dependency for Spring Boot 4-based applications. See <https://jolokia.org/reference/html/manual/spring.html> for more details.

note

The artifact for Spring Boot 4 is named `jolokia-support-springboot` (no number suffix) — this is the current/latest Jolokia Spring Boot integration, intended for Spring Boot 4+. The Spring Boot 3 variant carries an explicit `3` suffix (`jolokia-support-springboot3`).

pom.xml

```
<dependency>
    <groupId>org.jolokia</groupId>
    <artifactId>jolokia-support-springboot</artifactId>
    <version>x.y.z</version> <!-- replace with a concrete Jolokia Spring Boot integration version (for example, the latest from Maven Central), or omit this element if the version is already managed via a BOM in your <dependencyManagement> section -->
</dependency>
```

### Spring Boot 3 App[​](#spring-boot-3-app "Direct link to Spring Boot 3 App")

Spring Boot 3 does not support Jolokia directly, you need a separate dependency for Spring Boot 3-based applications. See <https://jolokia.org/reference/html/manual/spring.html> for more details.

pom.xml

```
<dependency>
    <groupId>org.jolokia</groupId>
    <artifactId>jolokia-support-springboot3</artifactId>
    <version>x.y.z</version> <!-- replace with a concrete Jolokia Spring Boot 3 integration version (for example, the latest from Maven Central), or omit this element if the version is already managed via a BOM in your <dependencyManagement> section -->
</dependency>
```

### Spring Boot 2 App[​](#spring-boot-2-app "Direct link to Spring Boot 2 App")

You can still monitor Spring Boot 2 applications with Jolokia endpoint using a Spring Boot Admin 3 server. Spring Boot 2 provided the actuator itself, so you only need the plain jolokia dependency.

pom.xml

```
<dependency>
    <groupId>org.jolokia</groupId>
    <artifactId>jolokia-core</artifactId>
    <version>x.y.z</version> <!-- replace with the desired Jolokia core version -->
</dependency>
```

## Logfile Viewer[​](#logfile-viewer "Direct link to Logfile Viewer")

By default, the logfile is not accessible via actuator endpoints and therefore not visible in Spring Boot Admin. In order to enable the logfile actuator endpoint you need to configure Spring Boot to write a logfile, either by setting `logging.file.path` or `logging.file.name`.

Spring Boot Admin will detect everything that looks like an URL and render it as hyperlink.

ANSI color-escapes are also supported. You need to set a custom file log pattern as Spring Boot’s default one doesn’t use colors.

To enforce the use of ANSI-colored output, set `spring.output.ansi.enabled=ALWAYS`. Otherwise Spring tries to detect if ANSI-colored output is available and might disable it.

application.properties

```
logging.file.name=/var/log/sample-boot-application.log (1)
logging.pattern.file=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx (2)
```

1. Destination the logfile is written to. Enables the logfile actuator endpoint.
2. File log pattern using ANSI colors.

## Show Tags per Instance[​](#show-tags-per-instance "Direct link to Show Tags per Instance")

`Tags` are a way to add visual markers per instance, they will appear in the application list as well as in the instance view. By default, no tags are added to instances, and it’s up to the client to specify the desired tags by adding the information to the metadata or info endpoint.

application.properties

```
#using the metadata
spring.boot.admin.client.instance.metadata.tags.environment=test

#using the info endpoint
info.tags.environment=test
```

## Spring Boot Admin Client[​](#spring-boot-admin-client "Direct link to Spring Boot Admin Client")

The Spring Boot Admin Client registers the application at the admin server. This is done by periodically doing an HTTP post request to the SBA Server providing information about the application.

tip

There are plenty of properties to influence the way how the SBA Client registers your application. In case that doesn’t fit your needs, you can provide your own ApplicationFactory implementation.
